# swift-plugin-for-obs

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json
Source/: plugin-main.swift  plugin-version.swift.in  swift-plugin-for-obs-Bridging-Header.h
cmake/common/: buildspec_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/macos/: compilerconfig.cmake  xcode.cmake
